--- a/assets/css/themepack.css
+++ b/assets/css/themepack.css
@@ -1220,6 +1220,10 @@ body .simplemodal-container#simplemodal-container .simplemodal-wrap .simplemodal
   margin-bottom: 0;
 }
 
+#user-navigation ul#nav-user-action-notification, #user-navigation ul#nav-user-action-dropdown {
+  z-index: 100;
+}
+
 .gd_add_listing_page #geodir-wrapper-content {
   padding: 20px;
   border: 1px solid #eee;
@@ -8658,6 +8662,14 @@ body #site-footer-widgets.site-footer-section .widget.widget.geodir_loginbox .ge
 
 .geodir-bubble_desc .geodir-i-location ~ span[itemprop="addressCountry"]:before {
   content: "\f0ac";
+}
+
+.flocks-home-map-container .geodir_map_container .map-category-listing-main .map_category {
+  height: 90%;
+}
+
+.flocks-home-map-container .geodir_map_container.geodir-map-full .map_background .triggermap {
+  top: 87.5%;
 }
 
 #buddypress #geodir-wrapper-content {
